# AntFarm

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cluster/: CMakeLists.txt
cluster/src/cluster/: ClusterApp.cpp  ClusterApp.h
core/: CMakeLists.txt
core/src/core/: Application.cpp  Application.h  Core.h  EntryPoint.h  pch.h
core/src/core/docker/: Container.cpp  Container.h  Docker.cpp  Docker.h
docker/: builder.Dockerfile  dev.Dockerfile  runner.Dockerfile  shell.Dockerfile
docker/core/: base.Dockerfile  build.Dockerfile
docker/modules/: ant_farm.Dockerfile  cluster.Dockerfile  core.Dockerfile  generation.Dockerfile  organism.Dockerfile
docker/scripts/: cleanup.sh  install.sh  install_base.sh  install_build.sh  install_dev.sh  test.sh
generation/: CMakeLists.txt
generation/src/generation/: GenerationApp.cpp  GenerationApp.h
organism/: CMakeLists.txt
organism/src/organism/: OrganismApp.cpp  OrganismApp.h
scripts/: build_cluster.sh  build_core.sh  build_dev.sh  build_docker.sh  build_modules.sh  docker_clean.sh  docker_shell.sh  dump_socket.sh  run_cluster.sh  run_dev.sh
